# hyprstate

./: .gitignore  60-hypr-power-usb-wake.rules  Cargo.toml  GPU_SPEC.md  GUI_SPEC.md  POWER_SPEC.md  README.md  deny.toml  hypr-power.py  hypr-power.service  hyprstate-powerd.service  hyprstate.py  hyprstate.service  install.sh  system-sleep-hook.sh  test_hyprstate.py
.github/workflows/: ci.yml  package.yml  security.yml
crates/hyprstate-fsm/: Cargo.toml
crates/hyprstate-fsm/src/: fsm.rs  gpu.rs  lib.rs  power.rs  profiles.rs
packaging/: PKGBUILD  build-srpm.sh  hyprstate.install  hyprstate.rpmlintrc  hyprstate.spec  migrate-from-devinstall.sh
src/: main.rs  paths.rs  sleep_hook.rs
src/cli/: gpu.rs  mod.rs  power.rs  profile.rs  status.rs
src/daemon/: ctx.rs  dispatcher.rs  effectors.rs  event.rs  gpu_drift.rs  mod.rs  power_policy.rs  sources.rs  telemetry.rs
src/dbus/: logind.rs  mod.rs  polkit.rs  powerd_client.rs  upower.rs
src/powerd/: knobs.rs  mod.rs
src/pure/: fsm.rs  gpu.rs  profiles.rs
src/sysio/: gpu_state.rs  hypr_instance.rs  hyprctl.rs  hypridle_log.rs  mod.rs  power_conf.rs  profiles.rs  sysfs.rs
