[package]
name = "hyprstate"
version = "2.0.0"
edition = "2024"
license = "MIT"
description = "Hyprland session/power state machine: lid, monitors, profiles, GPU selection, powerd"
repository = "https://github.com/MasonRhodesDev/hyprstate"

[dependencies]
clap = { version = "4.5", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
zbus = { version = "5", default-features = false, features = ["tokio"] }
tokio = { version = "1", features = ["rt", "macros", "time", "sync", "net", "process", "io-util", "signal"] }
futures-util = { version = "0.3", default-features = false }
libc = "0.2"
tracing = "0.1"
tracing-subscriber = "0.3"
anyhow = "1"
chrono = { version = "0.4", default-features = false, features = ["clock"] }

[profile.release]
lto = true
strip = true
