[workspace]
# hyprstate-gui is intentionally NOT a member: it lives in its own repo so the
# Slint/femtovg dependency tree never enters this crate's `cargo vendor` tarball
# or the RPM/PKGBUILD build. It path-depends on hyprstate-fsm instead.
members = [".", "crates/hyprstate-fsm"]
# Both members are default so `cargo build/test` (and the RPM %check, which
# uses %cargo_test) exercise the pure FSM/policy crate too — not just the
# binary. The GUI lives in its own repo and is intentionally not a member.
default-members = [".", "crates/hyprstate-fsm"]
resolver = "3"

[package]
name = "hyprstate"
version = "2.1.2"
edition = "2024"
license = "MIT"
description = "Hyprland session/power state machine: lid, monitors, profiles, GPU selection, powerd"
repository = "https://github.com/MasonRhodesDev/hyprstate"
# Shipped as a packaged binary (RPM/AUR), never `cargo publish`ed to crates.io.
# Also lets cargo-deny exempt the hyprstate-fsm path dependency.
publish = false

[dependencies]
hyprstate-fsm = { path = "crates/hyprstate-fsm" }
clap = { version = "4.5", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
zbus = { version = "5", default-features = false, features = ["tokio"] }
tokio = { version = "1", features = ["rt", "macros", "time", "sync", "net", "process", "io-util", "signal"] }
futures-util = { version = "0.3", default-features = false }
libc = "0.2"
tracing = "0.1"
tracing-subscriber = "0.3"
anyhow = "1"
chrono = { version = "0.4", default-features = false, features = ["clock"] }

[profile.release]
lto = true
strip = true
